--- a/view/index.html
+++ b/view/index.html
@@ -10,11 +10,11 @@
     <h1>Anomaly Detection Server</h1>
     <div class="container">
     <form action="/detect" method="POST" enctype="multipart/form-data" name="findAnomalies" target="result" id="form_detect">
-        <labal>CSV Learn File:</labal>
-        <input class="inputs" type="file" name="learn_file" id="learn_file">    
+        <labal>Upload CSV Learn File:</labal>
+        <input class="inputs" type="file" name="learn_file" id="learn_file" onchange="csvCheck(id)">    
         <br>
-        <labal>CSV Detect File:</labal>
-        <input class="inputs" type="file" name="detect_file" id="detect_file">
+        <labal>Upload CSV Detect File:</labal>
+        <input class="inputs" type="file" name="detect_file" id="detect_file" onchange="csvCheck(id)">
         <br>
         <div class="box">
         <labal>Select Algorithm:</labal>
@@ -34,8 +34,8 @@
     <iframe name="result" id="iframe1" style="border: 0;" width="0" height="0"></iframe>
     <table id="tableDetect" width="80%" height="auto" style="text-align: center;">
         <tr>
-           <th class="table_header">Description</th>
-           <th class="table_header" >Time Step</th>
+           <th class="table_header_description">Description</th>
+           <th class="table_header_timeStep">Time Step</th>
         </tr>
         <tbody id="tbid"></tbody>
 
