--- a/view/style.css
+++ b/view/style.css
@@ -26,6 +26,7 @@ body {
   border-radius: 5px;
 }
 
+
 .inputs {
   display: inline-block;
   background: rgb(75, 73, 73);
@@ -99,9 +100,7 @@ body {
 }
 
 table#tableDetect {
-  width: 40%;
-  margin-left: 30%;
-  margin-right: 30%;
+  width: 100%;
   border-width: 1px;
 }
 th,
@@ -119,7 +118,16 @@ tr {
   background-color: rgb(146, 146, 146);
   border: 15 solid black;
 }
-.table_header {
+.table_header_description {
+  color: white;
+
+  font-size: 30;
+  text-align: center;
+  background-color: rgb(75, 73, 73);
+  width:80%;
+}
+
+.table_header_timeStep {
   color: white;
 
   font-size: 30;
